RESOLVED FIXED278038
Background images for table cell groups are incorrectly sized
https://bugs.webkit.org/show_bug.cgi?id=278038
Summary Background images for table cell groups are incorrectly sized
Eddie Kohler
Reported 2024-08-13 12:38:28 PDT
Created attachment 472143 [details] Row background image example A background-image for a table cell group (row, row-group, column, column-group) should be sized to cover the whole group of cells, including their borders. For instance, consider LayoutTests/tables/mozilla_expected_failures/marvin/backgr_position-table-row-group.html. Rendered in Firefox and Chrome, the background-image (aqua stripes) lies below the cell borders. See also the attachment. In Safari background-images are sized to the cell's interior, exclusive of the cell border.
Attachments
Row background image example (784 bytes, text/html)
2024-08-13 12:38 PDT, Eddie Kohler
no flags
rendering in safari, firefox, chrome (208.22 KB, image/png)
2024-08-14 01:24 PDT, Karl Dubost
no flags
Eddie Kohler
Comment 1 2024-08-13 14:19:17 PDT
Karl Dubost
Comment 2 2024-08-14 01:24:37 PDT
Created attachment 472150 [details] rendering in safari, firefox, chrome Safari Technology Preview 200 20620.1.1 Firefox Nightly 131.0a1 13124.8.12 Google Chrome Canary 129.0.6656.0 6656.0
Radar WebKit Bug Importer
Comment 3 2024-08-14 01:26:09 PDT
EWS
Comment 4 2024-08-25 06:34:05 PDT
Committed 282712@main (47dcecbf0d79): <https://commits.webkit.org/282712@main> Reviewed commits have been landed. Closing PR #32134 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.